add block & entity value to player_interaction